# gitcounter

./: Dockerfile  README.md  antall-oracle-i-vault-iac.ipynb  gitcounter.py  main.tf  nais.yaml  pyproject.toml  requirements.txt  teamcounter.py  test_gitcounter.py
.github/workflows/: count_db.yaml  main.yml  pull_request.yml
src/: gitcounter.py
test/resources/apps/: testapp2.yml  testapp3.yml
test/test_repo/terraform/teams/team_test/apps/: testapp.yaml
