[tool.poetry]
name = "GitCounter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
GitPython = "^3.1.32"
prometheus-client = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
ipython = "^7.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
